hphp/hack/test/typecheck/reactive/print_in_rx7.php.exp
File "print_in_rx7.php", line 9, characters 5-8:
'echo' or 'print' are not allowed in reactive functions. (Typing[4226])
